--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "domal",
+  "name": "blorp",
   "version": "0.0.1",
   "description": "Small but mighty UI library",
   "author": "Evin Sellin",
