--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "protoblorp",
-  "version": "0.1.0",
+  "name": "blorp",
+  "version": "0.0.1",
   "description": "Small but mighty UI library. Proto version",
   "author": "Evin Sellin",
   "license": "MIT",
